POS001: Refactor user-service